Tested endpoints in TicketController/AdminTicketController